--- a/package.json
+++ b/package.json
@@ -14,46 +14,46 @@
   "author": "Julien Matondo",
   "license": "MIT",
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.15",
-    "@radix-ui/react-dialog": "^1.1.15",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-label": "^2.1.8",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.13",
-    "@radix-ui/react-toast": "^1.2.15",
-    "@supabase/ssr": "^0.8.0",
-    "@supabase/supabase-js": "^2.93.3",
-    "@tailwindcss/postcss": "^4.1.18",
-    "@tanstack/react-query": "^5.90.16",
-    "autoprefixer": "^10.4.20",
-    "axios": "^1.13.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.562.0",
-    "next": "^16.1.1",
-    "next-intl": "^4.6.1",
-    "next-themes": "^0.4.3",
-    "postcss": "^8.4.49",
-    "prettier": "^3.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
-    "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^4.1.18",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.7.2"
+    "@radix-ui/react-alert-dialog": "1.1.15",
+    "@radix-ui/react-dialog": "1.1.15",
+    "@radix-ui/react-dropdown-menu": "2.1.16",
+    "@radix-ui/react-label": "2.1.8",
+    "@radix-ui/react-select": "2.2.6",
+    "@radix-ui/react-slot": "1.2.3",
+    "@radix-ui/react-tabs": "1.1.13",
+    "@radix-ui/react-toast": "1.2.15",
+    "@supabase/ssr": "0.8.0",
+    "@supabase/supabase-js": "2.93.3",
+    "@tailwindcss/postcss": "4.1.18",
+    "@tanstack/react-query": "5.90.16",
+    "autoprefixer": "10.4.20",
+    "axios": "1.13.2",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "date-fns": "4.1.0",
+    "lucide-react": "0.562.0",
+    "next": "16.1.1",
+    "next-intl": "4.6.1",
+    "next-themes": "0.4.3",
+    "postcss": "8.4.49",
+    "prettier": "3.4.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "sonner": "2.0.7",
+    "tailwind-merge": "3.4.0",
+    "tailwind-scrollbar": "4.0.2",
+    "tailwindcss": "4.1.18",
+    "tailwindcss-animate": "1.0.7",
+    "typescript": "5.7.2"
   },
   "devDependencies": {
-    "@types/node": "^25.0.3",
-    "@types/react": "^19.0.6",
-    "@types/react-dom": "^19.0.2",
-    "eslint": "^9.18.0",
-    "eslint-config-next": "^16.1.1",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1"
+    "@types/node": "25.0.3",
+    "@types/react": "19.0.6",
+    "@types/react-dom": "19.0.2",
+    "eslint": "9.18.0",
+    "eslint-config-next": "16.1.1",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-simple-import-sort": "12.1.1"
   }
 }
